--- a/header.css
+++ b/header.css
@@ -1,5 +1,6 @@
 .cabeçalho_menu-hamburgue {
-    width: ;
-    height: ;
-    
+    width:24px ;
+    height:24px ;
+    background-image: ;
+    display: ;
 }
